--- a/AUVSI_SUAS/reportChallenge/reportChallenge.tex
+++ b/AUVSI_SUAS/reportChallenge/reportChallenge.tex
@@ -68,20 +68,21 @@
 
 \pretitle{\begin{center}\Huge\bfseries} % Article title formatting
 \posttitle{\end{center}} % Article title closing formatting
-\title{Article Title} % Article title
+\title{Motion planning of a fixed wings Uav through an hybrid approach based on artificial potential
+  fields and RRT. } % Article title
+\bigskip
 \author{%
-\textsc{Edoardo Ghini}\thanks{A thank you or further information} \\[1ex] % Your name
-\normalsize Dipartimento di Ingegneria dell'Università di Roma La Sapienza\\
-\normalsize \href{mailto:ghiniedoardo@gmail.com}{john@smith.com} % Your email address
-%\and % Uncomment if 2 authors are required, duplicate these 4 lines if more
-%\textsc{Jane Smith}\thanks{Corresponding author} \\[1ex] % Second author's name
-%\normalsize University of Utah \\ % Second author's institution
-%\normalsize \href{mailto:jane@smith.com}{jane@smith.com} % Second author's email address
+\textsc{Edoardo Ghini} \\[1ex] % Your name
+\normalsize \href{mailto:ghiniedoardo@gmail.com}{ghiniedoardo@gmail.com} % Your email address
+\and % Uncomment if 2 authors are required, duplicate these 4 lines if more
+\textsc{Gianluca Cerilli} \\[1ex] % Second author's name
+\normalsize \href{mailto:gianlucer@gmail.com}{gianlucer@gmail.com}\\ % Second author's email address
+\normalsize Dipartimento di Ingegneria dell'Universita di Roma La Sapienza\\
 }
 \date{\today} % Leave empty to omit a date
 \renewcommand{\maketitlehookd}{%
 \begin{abstract}
-\noindent \blindtext % Dummy abstract text - replace \blindtext with your abstract text
+\noindent  This is the abstract, try to be concise !
 \end{abstract}
 }
 
@@ -98,69 +99,65 @@
 
 \section{Introduction}
 
-\lettrine[nindent=0em,lines=3]{L} orem ipsum dolor sit amet, consectetur adipiscing elit.
-\blindtext % Dummy text
-
-\blindtext % Dummy text
-
+\lettrine[nindent=0em,lines=3]{W}e will present a work made
+for an international challenge\footnote{The challenge is the AUVSI-SUAS hosted
+  in united states in summer 2018.} that every year involves several accademic teams.\\
+This article has the following structure : \\
+in section 2, we will present the problem statement and in section 3 
+ we will give tecnical informations on the hardware at our disposal,
+finally in section 4, the adopted solution will be discussed.
+ 
 %------------------------------------------------
 
-\section{Methods}
-
+\section{Problem Statement}
 Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
-\begin{itemize}
-\item Donec dolor arcu, rutrum id molestie in, viverra sed diam
-\item Curabitur feugiat
-\item turpis sed auctor facilisis
-\item arcu eros accumsan lorem, at posuere mi diam sit amet tortor
-\item Fusce fermentum, mi sit amet euismod rutrum
-\item sem lorem molestie diam, iaculis aliquet sapien tortor non nisi
-\item Pellentesque bibendum pretium aliquet
-\end{itemize}
-\blindtext % Dummy text
+\section{Hardware components}
+\subsection{Structural design}
+Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+\subsection{On board computing}
+Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+\subsection{Sensing instruments}
+Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+\subsection{Communication devices}
+Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+\subsection{Auto pilot framework}
+Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+\section{Hybrid planner}
 
-Text requiring further explanation\footnote{Example footnote}.
+\subsection{RRT}
+Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+\subsection{Artificial potentials}
+Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+\subsection{Implementation}
+Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+
+%%\footnote{Example footnote}.
 
 %------------------------------------------------
 
-\section{Results}
+\section{Conclusion}
 
-\begin{table}
-\caption{Example table}
-\centering
-\begin{tabular}{llr}
-\toprule
-\multicolumn{2}{c}{Name} \\
-\cmidrule(r){1-2}
-First name & Last Name & Grade \\
-\midrule
-John & Doe & $7.5$ \\
-Richard & Miles & $2$ \\
-\bottomrule
-\end{tabular}
-\end{table}
+% \begin{table}
+% \caption{Example table}
+% \centering
+% \begin{tabular}{llr}
+% \toprule
+% \multicolumn{2}{c}{Name} \\
+% \cmidrule(r){1-2}
+% First name & Last Name & Grade \\
+% \midrule
+% John & Doe & $7.5$ \\
+% Richard & Miles & $2$ \\
+% \bottomrule
+% \end{tabular}
+% \end{table}
 
-\blindtext % Dummy text
 
 \begin{equation}
 \label{eq:emc}
 e = mc^2
 \end{equation}
 
-\blindtext % Dummy text
-
-%------------------------------------------------
-
-\section{Discussion}
-
-\subsection{Subsection One}
-
-A statement requiring citation \cite{Figueredo:2009dg}.
-\blindtext % Dummy text
-
-\subsection{Subsection Two}
-
-\blindtext % Dummy text
 
 %----------------------------------------------------------------------------------------
 %	REFERENCE LIST
