AUVSI one line on the report,   QUAD FAILURE modified corke scheme and fixed coordinate system differences and decided for the parameters of corke model( mass, etc) , adapted figure size and position on the screen from the plot s function

--- a/AUVSI_SUAS/reportChallenge/reportChallenge.tex
+++ b/AUVSI_SUAS/reportChallenge/reportChallenge.tex
@@ -156,6 +156,11 @@ Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas.
 \subsection{Auto pilot framework}
 Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
 \section{Hybrid planner}
+We implemented two different strategies, since both present some shortcomings
+and advantages, we tried to take the best of the two world
+
+
+s
 
 \subsection{RRT}
 Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
