--- a/AUVSI_SUAS/reportChallenge/reportChallenge.tex
+++ b/AUVSI_SUAS/reportChallenge/reportChallenge.tex
@@ -42,6 +42,7 @@
 
 \usepackage{romannum} % Roman numbers 
 \usepackage{graphicx}
+\usepackage{wrapfig}
 \graphicspath{ {images/} }
 \usepackage{wrapfig}
 \usepackage{subcaption}
@@ -106,14 +107,14 @@ All the joining teams to the challenge will have to compete on several tasks
 concerning on actual problems in the governance of Unmanned Aerial Vehicles.\\
 Each team will bring its prototype of UAV on a common flight ground and try to
 score the greatest number of points among all the tasks proposed which are:
-\begin{itemize}
+\begin{enumerate}\centering
 \item Autonomous Flight
 \item Obstacle Avoidance
 \item Object Detection
 \item Object Classification
 \item Object Localization 
 \item Air Delivery
-\end{itemize}
+\end{enumerate}
 
 
 This will be the first partecipation at a competition of this kind for the team
@@ -121,6 +122,7 @@ Sapienza, in fact the previous challenges in which our university has already
 been involved required a human controlled guidance system.
 Therefore the autonomous flight constraint has to be faced without previous
 insights on the matter.
+\newpage
 
 \subsection{Starting Points}
 The areonautical research department, in the past decade, has spent a big
@@ -130,25 +132,66 @@ This system allows to control the complex aerodynamics of the vehicle from an
 higher level of abstraction, its main high level control mode uses a series of
 way points that describes a trajectory.\\
 \bigskip
+\begin{wrapfigure}{r}{5.5cm}
+\caption{YAK scaled aero model}\label{wrap-fig:1}
+\includegraphics[width=5.5cm]{YAK1}
+\end{wrapfigure} 
+
 In this way the aircraft will likely follow a path made of lines that intersects subsequent waypoints.\\
 The system is designed to work on an on-board computer and to communicate with a
 ground station that will continuously send to and receive from the judges's
 server, telemetrical data and mission objectives.\\
-We will use a fixed-wigs radio controlled aircraft model commonly used in hobby
-modeling. It is a scaled reproduction of the YAK (   TODO maybe is better add
-the model as footnote   )
 
 
+We will use a fixed-wigs radio controlled aircraft model\footnote{It is a scaled
+  reproduction (1:3 ratio) of the YAK 112} commonly used in hobby
+modeling as shown in Figure~\ref{wrap-fig:1}.
 
 
 \subsection{Our task}
+As atomic part of the team which counts several members coming from an
+aeronutical background, we have an uncommon area of expertise that concerns
+\textbf{automation} and \textbf{robotics}.\\ So we engaged the autonomous guidance problem that
+comprehend also the obstacle avoidance clause.\par
+The competition will be organized in such a way that during the various missions
+of the challenge each team will receive pose informations about fixed and mobile
+obstacles that will be \textbf{virtual}.\\
+Then the judges will check the success or failure in avoiding obstacles
+according to the \textbf{telemetry} data that they will receive from each team.\\
+In other words, we where supposed to design a \textbf{path planning} algorith
+that will bring the UAV from a start position to a goal position without collisions.
+
+
 
 
 \section{Hardware components}
-\subsection{Structural design}
-Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+
+\subsection{Propulsion}
+\begin{wrapfigure}{r}{5.5cm}
+\caption{DLE55 motor}\label{wrap-fig:2}
+\includegraphics[width=5.5cm]{YAK3}
+\end{wrapfigure} 
+
+
+
+The engine chosen is a \textbf{DLE55} (in Figure~\ref{wrap-fig:2} ) :
+
+\begin{enumerate}
+\item 50 cc monocylinder petrol engine
+\item reservoir capable of containing 950cc of petrol
+\item Equipped with a 7, 4V LiPo battery
+\end{enumerate}
+
+
 \subsection{On board computing}
-Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+The autonomous guidance architecture, implemented in Matlab and Simulink, is
+converted in compiled high speed C, Cpp language.\\ It will be run by Arduino Due
+and there will be also a Raspberry pi Model 3 that will run a kalman filter in
+order to process all signals from sensors.
+
+\bigskip I am arrived here  % TODO at the end we will focus on layouts and image positions
+
+
 \subsection{Sensing instruments}
 Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
 \subsection{Communication devices}
@@ -157,10 +200,7 @@ Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas.
 Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
 \section{Hybrid planner}
 We implemented two different strategies, since both present some shortcomings
-and advantages, we tried to take the best of the two world
-
-
-s
+and advantages, we tried to take the best of the two worlds
 
 \subsection{RRT}
 Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
