--- a/AUVSI_SUAS/reportChallenge/reportChallenge.tex
+++ b/AUVSI_SUAS/reportChallenge/reportChallenge.tex
@@ -1,25 +1,5 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Journal Article
-% LaTeX Template
-% Version 1.4 (15/5/16)
-%
-% This template has been downloaded from:
-% http://www.LaTeXTemplates.com
-%
-% Original author:
-% Frits Wenneker (http://www.howtotex.com) with extensive modifications by
-% Vel (vel@LaTeXTemplates.com)
-%
-% License:
-% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\documentclass[oneside,onecolumn]{article}
 
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
-
-\documentclass[twoside,twocolumn]{article}
 
 \usepackage{blindtext} % Package to generate dummy text throughout this template 
 
@@ -53,69 +33,165 @@
 \pagestyle{fancy} % All pages have headers and footers
 \fancyhead{} % Blank out the default header
 \fancyfoot{} % Blank out the default footer
-\fancyhead[C]{Running title $\bullet$ May 2016 $\bullet$ Vol. XXI, No. 1} % Custom header text
-\fancyfoot[RO,LE]{\thepage} % Custom footer text
+% \fancyhead[C]{Running title $\bullet$ May 2016 $\bullet$ Vol. XXI, No. 1} % Custom header text
+\fancyfoot[RO,L]{\thepage} % Custom footer text
 
 \usepackage{titling} % Customizing the title section
 
 \usepackage{hyperref} % For hyperlinks in the PDF
 
-%----------------------------------------------------------------------------------------
+\usepackage{romannum} % Roman numbers 
+\usepackage{graphicx}
+\usepackage{wrapfig}
+\graphicspath{ {images/} }
+\usepackage{wrapfig}
+\usepackage{subcaption}
+
+% ----------------------------------------------------------------------------------------
 %	TITLE SECTION
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \setlength{\droptitle}{-4\baselineskip} % Move the title up
 
 \pretitle{\begin{center}\Huge\bfseries} % Article title formatting
-\posttitle{\end{center}} % Article title closing formatting
+  \posttitle{\end{center}} % Article title closing formatting
 \title{Motion planning of a fixed wings Uav through an hybrid approach based on artificial potential
   fields and RRT. } % Article title
-\bigskip
 \author{%
-\textsc{Edoardo Ghini} \\[1ex] % Your name
-\normalsize \href{mailto:ghiniedoardo@gmail.com}{ghiniedoardo@gmail.com} % Your email address
-\and % Uncomment if 2 authors are required, duplicate these 4 lines if more
-\textsc{Gianluca Cerilli} \\[1ex] % Second author's name
-\normalsize \href{mailto:gianlucer@gmail.com}{gianlucer@gmail.com}\\ % Second author's email address
-\normalsize Dipartimento di Ingegneria dell'Universita di Roma La Sapienza\\
+  \textsc{Edoardo Ghini} \\[1ex] % Your name
+  \normalsize \href{mailto:ghiniedoardo@gmail.com}{ghiniedoardo@gmail.com} % Your email address
+  \and % Uncomment if 2 authors are required, duplicate these 4 lines if more
+  \textsc{Gianluca Cerilli} \\[1ex] % Second author's name
+  \normalsize \href{mailto:gianlucer@gmail.com}{gianlucer@gmail.com}\\ % Second author's email address
+  \normalsize Dipartimento di Ingegneria dell'Universita di Roma La Sapienza\\
 }
 \date{\today} % Leave empty to omit a date
-\renewcommand{\maketitlehookd}{%
-\begin{abstract}
-\noindent  This is the abstract, try to be concise !
-\end{abstract}
-}
-
-%----------------------------------------------------------------------------------------
+% \renewcommand{\maketitlehookd}{%
+% \begin{abstract}
+%   \noindent  This is the abstract, try to be concise !
+% \end{abstract}
+% }
+% ----------------------------------------------------------------------------------------
 
 \begin{document}
 
 % Print the title
 \maketitle
+\bigskip
+\bigskip
+\bigskip
+\bigskip
+\begin{center}
+  \includegraphics[width=0.3\textwidth]{laSapienza}
+\end{center}
 
-%----------------------------------------------------------------------------------------
+
+% ----------------------------------------------------------------------------------------
 %	ARTICLE CONTENTS
-%----------------------------------------------------------------------------------------
-
+% ----------------------------------------------------------------------------------------
+\newpage
 \section{Introduction}
 
 \lettrine[nindent=0em,lines=3]{W}e will present a work made
 for an international challenge\footnote{The challenge is the AUVSI-SUAS hosted
   in united states in summer 2018.} that every year involves several accademic teams.\\
-This article has the following structure : \\
-in section 2, we will present the problem statement and in section 3 
- we will give tecnical informations on the hardware at our disposal,
-finally in section 4, the adopted solution will be discussed.
- 
-%------------------------------------------------
+This report respects the following structure : \\
+in section \Romannum{2}, we will present the problem statement and in section
+\Romannum{3} we will give tecnical informations on the hardware at our disposal,
+finally in section \Romannum{4}, the adopted solution will be discussed.
+
+% ------------------------------------------------
 
 \section{Problem Statement}
-Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+All the joining teams to the challenge will have to compete on several tasks
+concerning on actual problems in the governance of Unmanned Aerial Vehicles.\\
+Each team will bring its prototype of UAV on a common flight ground and try to
+score the greatest number of points among all the tasks proposed which are:
+\begin{enumerate}\centering
+\item Autonomous Flight
+\item Obstacle Avoidance
+\item Object Detection
+\item Object Classification
+\item Object Localization 
+\item Air Delivery
+\end{enumerate}
+
+
+This will be the first partecipation at a competition of this kind for the team
+Sapienza, in fact the previous challenges in which our university has already
+been involved required a human controlled guidance system.
+Therefore the autonomous flight constraint has to be faced without previous
+insights on the matter.
+\newpage
+
+\subsection{Starting Points}
+The areonautical research department, in the past decade, has spent a big
+effort working to an autonomous guidance system, that has been thinkered,
+designed and implemented by master students in theyr thesis.\\
+This system allows to control the complex aerodynamics of the vehicle from an
+higher level of abstraction, its main high level control mode uses a series of
+way points that describes a trajectory.\\
+\bigskip
+\begin{wrapfigure}{r}{5.5cm}
+\caption{YAK scaled aero model}\label{wrap-fig:1}
+\includegraphics[width=5.5cm]{YAK1}
+\end{wrapfigure} 
+
+In this way the aircraft will likely follow a path made of lines that intersects subsequent waypoints.\\
+The system is designed to work on an on-board computer and to communicate with a
+ground station that will continuously send to and receive from the judges's
+server, telemetrical data and mission objectives.\\
+
+
+We will use a fixed-wigs radio controlled aircraft model\footnote{It is a scaled
+  reproduction (1:3 ratio) of the YAK 112} commonly used in hobby
+modeling as shown in Figure~\ref{wrap-fig:1}.
+
+
+\subsection{Our task}
+As atomic part of the team which counts several members coming from an
+aeronutical background, we have an uncommon area of expertise that concerns
+\textbf{automation} and \textbf{robotics}.\\ So we engaged the autonomous guidance problem that
+comprehend also the obstacle avoidance clause.\par
+The competition will be organized in such a way that during the various missions
+of the challenge each team will receive pose informations about fixed and mobile
+obstacles that will be \textbf{virtual}.\\
+Then the judges will check the success or failure in avoiding obstacles
+according to the \textbf{telemetry} data that they will receive from each team.\\
+In other words, we where supposed to design a \textbf{path planning} algorith
+that will bring the UAV from a start position to a goal position without collisions.
+
+
+
+
 \section{Hardware components}
-\subsection{Structural design}
-Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+
+\subsection{Propulsion}
+\begin{wrapfigure}{r}{5.5cm}
+\caption{DLE55 motor}\label{wrap-fig:2}
+\includegraphics[width=5.5cm]{YAK3}
+\end{wrapfigure} 
+
+
+
+The engine chosen is a \textbf{DLE55} (in Figure~\ref{wrap-fig:2} ) :
+
+\begin{enumerate}
+\item 50 cc monocylinder petrol engine
+\item reservoir capable of containing 950cc of petrol
+\item Equipped with a 7, 4V LiPo battery
+\end{enumerate}
+
+
 \subsection{On board computing}
-Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+The autonomous guidance architecture, implemented in Matlab and Simulink, is
+converted in compiled high speed C, Cpp language.\\ It will be run by Arduino Due
+and there will be also a Raspberry pi Model 3 that will run a kalman filter in
+order to process all signals from sensors.
+
+\bigskip I am arrived here  % TODO at the end we will focus on layouts and image positions
+
+
 \subsection{Sensing instruments}
 Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
 \subsection{Communication devices}
@@ -123,6 +199,8 @@ Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas.
 \subsection{Auto pilot framework}
 Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
 \section{Hybrid planner}
+We implemented two different strategies, since both present some shortcomings
+and advantages, we tried to take the best of the two worlds
 
 \subsection{RRT}
 Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
@@ -131,48 +209,48 @@ Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas.
 \subsection{Implementation}
 Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
 
-%%\footnote{Example footnote}.
+%% \footnote{Example footnote}.
 
-%------------------------------------------------
+% ------------------------------------------------
 
 \section{Conclusion}
 
 % \begin{table}
-% \caption{Example table}
-% \centering
-% \begin{tabular}{llr}
-% \toprule
-% \multicolumn{2}{c}{Name} \\
-% \cmidrule(r){1-2}
-% First name & Last Name & Grade \\
-% \midrule
-% John & Doe & $7.5$ \\
-% Richard & Miles & $2$ \\
-% \bottomrule
-% \end{tabular}
+%   \caption{Example table}
+%   \centering
+%   \begin{tabular}{llr}
+%     \toprule
+%     \multicolumn{2}{c}{Name} \\
+%     \cmidrule(r){1-2}
+%     First name & Last Name & Grade \\
+%     \midrule
+%     John & Doe & $7.5$ \\
+%     Richard & Miles & $2$ \\
+%     \bottomrule
+%   \end{tabular}
 % \end{table}
 
 
 \begin{equation}
-\label{eq:emc}
-e = mc^2
+  \label{eq:emc}
+  e = mc^2
 \end{equation}
 
 
-%----------------------------------------------------------------------------------------
-%	REFERENCE LIST
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
+% REFERENCE LIST
+% ----------------------------------------------------------------------------------------
 
 \begin{thebibliography}{99} % Bibliography - this is intentionally simple in this template
 
 \bibitem[Figueredo and Wolf, 2009]{Figueredo:2009dg}
-Figueredo, A.~J. and Wolf, P. S.~A. (2009).
-\newblock Assortative pairing and life history strategy - a cross-cultural
+  Figueredo, A.~J. and Wolf, P. S.~A. (2009).
+  \newblock Assortative pairing and life history strategy - a cross-cultural
   study.
-\newblock {\em Human Nature}, 20:317--330.
- 
+  \newblock {\em Human Nature}, 20:317--330.
+  
 \end{thebibliography}
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \end{document}
