--- a/AUVSI_SUAS/reportChallenge/reportChallenge.tex
+++ b/AUVSI_SUAS/reportChallenge/reportChallenge.tex
@@ -214,14 +214,12 @@ Artificial Potential Fields (APF) have been considered for two main reasons:
 Using APF the UAV can react as soon as entering the range of influence of the obstacle, with a smooth movement. This also because an implementation with vertex fields has been made, replacing repulsive actions with actions forcing the robot to get around it.
 \subsection{Implementation}
 We consider the kinematic model of a fixed-wing UAV flying at a constant altitude. So, we can neglect the pitch angle, obtaining:\\
-\[
-\begin{array}{lcr}
-\dot{x} & = & vcos$ \psi $ \\
-\dot{y} & = & vsin$ \psi $ \\
-\dot{\psi} & = & -\frac{g}{v}tan$ \phi $ \\
-\dot{\phi} & = & u_{\phi }
-\end{array}
-\]\\
+\begin{array}{lcc}
+$ \dot{x} $ & = & $vcos \psi $ \\
+$ \dot{y} $ & = & $vsin \psi $ \\
+$ \dot{\psi} $ & = & -$ \frac{g}{v} tan \phi $ \\
+$ \dot{\phi} $ & = & $ u_{\phi } $
+\end{array}\\
 in which the speed $v$ and roll rate $u_{\phi}$ are the control inputs.
 
 %% \footnote{Example footnote}.
