First part of teleoperation report

--- a/TELEOPERATION/reportTeleop/Frontespizio.tex
+++ b/TELEOPERATION/reportTeleop/Frontespizio.tex
@@ -6,10 +6,11 @@
 	\vspace{2em}
 %	{\normalsize EE} \\
 %	\vspace{1em}
-	{\large \textsc{Haptic interfaces (E' giusto???) }} \\
+	{\large \textsc{Locomotion and haptic interfaces for VR exploration}} \\
 	\doublespacing
 	\vspace{5em}
-	{\Large \textbf{Vibration suppression in bilateral teleoperation}}
+	{\Large \textbf{Vibration Suppression Design for Virtual Compliance Control
+			in Bilateral Teleoperation}}
 \end{center}
 
 \vskip 2cm
