--- a/TELEOPERATION/reportTeleop/Report.tex
+++ b/TELEOPERATION/reportTeleop/Report.tex
@@ -32,8 +32,9 @@
 
 \author{Giuseppe L'Erario \\ Edoardo Ghini \\ Gianluca Cerilli}
 \date{}
-\title{Vibration suppression in bilateral teleoperation}
-\subject{Haptic interfaces}
+\title{Vibration Suppression Design for Virtual Compliance Control
+	in Bilateral Teleoperation}
+\subject{Locomotion and haptic interfaces for VR exploration}
 \begin{document}
 
 
@@ -46,5 +47,11 @@
 \input{giuseppe}
 
 \input{edoardo}
+
+\clearpage
+
+\bibliographystyle{ieeetr}
+
+\bibliography{sample.bib}
 
 \end{document}
